fix: product details width on mobile

--- a/src/containers/ProductDetails/ProductDetails.css
+++ b/src/containers/ProductDetails/ProductDetails.css
@@ -5,7 +5,6 @@
 
 .product-detail-card {
   max-width: 1024px;
-  width: 100%;
   grid-column-gap: 1.5rem;
   -webkit-column-gap: 1.5rem;
   column-gap: 1.5rem;
